# University-projects

./: README.md
Bachelor/1.semester/Introduction to Programming Systems/Project 1 - Text processing in C/: proj1.c
Bachelor/1.semester/Introduction to Programming Systems/Project 2 - Iterations/: proj2.c
Bachelor/1.semester/Introduction to Programming Systems/Project 3 - Clustering/: input.txt  proj3.c
Bachelor/2.semester/Digital Systems Design/: fsm.vhd
Bachelor/2.semester/Operating Systems/Project 1/: wana
Bachelor/2.semester/Operating Systems/Project 2/: Makefile  main.c  rivercrossing.c  rivercrossing.h
Bachelor/2.semester/Practical Aspects of Software Design/Project 1/Assignment/: CMakeLists.txt  CMakeLists.txt.in  CodeCoverage.cmake  GoogleTest.cmake  tdd_code.cpp  tdd_code.h  tdd_tests.cpp  white_box_code.cpp  white_box_code.h
Bachelor/2.semester/Practical Aspects of Software Design/Project 1/Assignment/libs/: black_box_lib.lib  red_black_tree.h  red_black_tree_lib.h
Bachelor/2.semester/Scripting Languages/: isj_proj1.py  isj_proj2.py  isj_proj3.py  isj_proj4.py  isj_proj5.py  isj_proj6.py  isj_proj7.py  isj_proj8.py
Bachelor/2.semester/The C Programming Language/Project 1/: Makefile  bit_array.h  du1-obrazek.ppm  eratosthenes.c  error.c  error.h  ppm.c  ppm.h  primes.c  steg-decode.c
Bachelor/2.semester/The C Programming Language/Project 2/: Makefile  htab.h  htab_begin.c  htab_bucket_count.c  htab_clear.c  htab_end.c  htab_free.c  htab_hash_func.c  htab_init.c  htab_iterator_get_key.c  htab_iterator_get_value.c  htab_iterator_next.c  htab_iterator_set_value.c  htab_lookup_add.c  htab_move.c  htab_size.c  io.c  tail.c  tail2.cc  wordcount.c
Bachelor/3.semester/Formal Languages and Compilers/Solution/: Makefile  dString.c  dString.h  error.h  generator.c  generator.h  list.c  list.h  main.c  parser.c  parser.h  rozdeleni  scanner.c  scanner.h  stack.c  stack.h  symtable.c  symtable.h
Bachelor/4.semester/Computer Communications and Networks/Project 1/: makefile  readme.md
Bachelor/4.semester/Computer Communications and Networks/Project 2/: Makefile  README.md
Bachelor/4.semester/Fundamentals of Artificial Intelligence/: task3 - Sudoku using min-conflict.xlsx
Bachelor/4.semester/Machine Learning and Recognition/: Assignment.txt
Bachelor/5.semester/Information Systems/: doc.html
Bachelor/6.semester/Bachelor's thesis/: README.md
Master/1.semester/Artificial Intelligence and Machine Learning/: README.md  debug.save  dicewars.config  install.sh  path.sh  requirements.txt
Master/1.semester/Computation Systems Architectures/Project 1/: CMakeLists.txt  MB-xloren15.txt  advisor.pbs  evaluate.pbs  main.cc
Master/1.semester/Computation Systems Architectures/Project 1/calculators/: BaseMandelCalculator.cc  BaseMandelCalculator.h  BatchMandelCalculator.cc  BatchMandelCalculator.h  LineMandelCalculator.cc  LineMandelCalculator.h  RefMandelCalculator.cc  RefMandelCalculator.h
Master/1.semester/Computation Systems Architectures/Project 1/common/: cnpy.cc  cnpy.h  vector_helpers.h
Master/1.semester/Computation Systems Architectures/Project 1/scripts/: compare.py  compare.sh  plot_evaluate.py  visualise.py
Master/1.semester/Computation Systems Architectures/Project 2/: CMakeLists.txt  PMC-xloren15.txt  evaluate.pbs  main.cpp  vtune.pbs
Master/1.semester/Computation Systems Architectures/Project 2/common/: base_mesh_builder.cpp  base_mesh_builder.h  parametric_scalar_field.cpp  parametric_scalar_field.h  ref_mesh_builder.cpp  ref_mesh_builder.h  vector_helpers.h
Master/1.semester/Computation Systems Architectures/Project 2/data/: bun_zipper_res1.pts  bun_zipper_res2.pts  bun_zipper_res3.pts  bun_zipper_res4.pts  dragon_vrip_res2.pts  dragon_vrip_res3.pts  dragon_vrip_res4.pts
Master/1.semester/Computation Systems Architectures/Project 2/data/benchmark/: 001.pts  010.pts  020.pts  040.pts  080.pts  160.pts  320.pts  642.pts
Master/1.semester/Computation Systems Architectures/Project 2/parallel_builder/: loop_mesh_builder.cpp  loop_mesh_builder.h  tree_mesh_builder.cpp  tree_mesh_builder.h
Master/1.semester/Computation Systems Architectures/Project 2/scripts/: check_output.py  compare.sh  extract_point_cloud.py  generate_data_and_plots.sh  generate_plots.py  measure_grid_scaling.sh  measure_input_scaling.sh
Master/1.semester/Data Storage and Preparation/: README.md  docker-compose.yml  requirements.txt  run.py  run_queries.py
Master/1.semester/Statistics and Probability/: xloren15_vypocty.xlsx
Master/2.semester/Convolutional Neural Networks/: README.md
Master/3.semester/Advanced Database Systems/: do_projection.bat  restore_build_run.bat  run_command.bat  run_projection.bat  run_query.bat
Master/3.semester/Bayesian Models for Machine Learning/: assignment.ipynb  solution.ipynb
Master/3.semester/Distributed Application Environment/: 1_log_mr_cluster.txt  1_log_mr_local.txt  1_log_pig_cluster.txt  1_log_pig_local.txt  1_output_mr.txt  1_output_pig.txt  1_popis.txt  2_log_cluster.txt  2_log_local.txt
(+1310 files in other folders)
